styled header and footer
standard html5 tags

--- a/act2_validacio_formularis.html
+++ b/act2_validacio_formularis.html
@@ -8,10 +8,13 @@
 	<script type="text/javascript" src="js/validations.js"></script>
 </head>
 <body>
+	<header>
 	<p id="loggin">Ja tens un compte? <a href="login.html" class="access">Accedeix</a></p>
+	<h1>Facevuc</h1>
+	</header>
 	<div id="wrapper">
 		<form action="" method="post">
-			<h1>Facevuc</h1>
+			
 			<input type="text" placeholder="Nom d'usuari"  pattern="^[A-Za-z0-9_]{1,32}$" required/>
 			<input type="email" placeholder="Correu electrònic" required/>
 			<div class="pwwrapper">
@@ -24,7 +27,10 @@
 				<input id="accept" type="submit" value="Som-hi!"/>			
 			</div>			
 		</form>
-		<p>Registran-te acceptes els termes del <a href="servei.html" class="about">servei</a> i la <a href="privacy.html" class="about">politica de privacitat</a></p>
+		<footer>
+			<p>Registran-te acceptes els termes del <a href="servei.html" class="about">servei</a> i la <a href="privacy.html" class="about">politica de privacitat</a></p>
+		</footer>
+		
 	</div>
 
 		
